# GameSentenceMiner

./: .gitattributes  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .roomodes  .sonarcloud.properties  2026-03-29 13-46-45.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Manifest.in  README.md  anki.py  clipboard.py  concat_proj.py  config.py  config_EXAMPLE.toml  config_gui.py  config_reader.py  configuration.py  conftest.py  ffmpeg.py  game-db.plan  gametext.py  gsm-tips.md  launcher.py  main.py  main_gui.py  model.py  notification.py  obs.py  offset_updater.py  package-lock.json  package.json  package.json.dev  pnpm-lock.yaml  pyproject.toml  pytest.ini  (+20 more)
.claude/: settings.local.json
.github/: CONTRIBUTING.md  FUNDING.yml  README.md  copilot-instructions.md  dependabot.yml
.github/files/: MarvelRivals_2025-05-04-04-13-04-623.opus  readme_demo.avif
.github/workflows/: build_exe.yml  build_overlay_server.yml  dev_release_exe.yml  dev_windows_unpacked.yml  main.yml  pypi.yml  pypi_dev.yml  pypi_release.yml  python-publish.yml  release.yml  release_exe.yml  release_linux.yml  release_mac.yml  release_mac_test.yml  release_windows.yml  sign_overlay_server.yml  sign_windows_only.yml  test_electron_mac_homebrew.yml  test_python.yml  test_uv_run.yml
.hypothesis/constants/: 0a7044731fe73e8d  222364fde158ce7e  253bba014decf946  29972f2d79477379  33d8f23c7b82f04d  433918ce41067d49  450d5df62bdc53c0  45aaa5e41c1afc54  4a56a93bcf4d878d  6d6eab286d37bcf3  79bd7c98f448bf83  831143de9f0da7ba  8319a526b51818f5  870c176a167dfb18  8d49fca4dfc2b0c6  94b63fc67e1a6787  a3bae50925ffddce  b1b8f20bd8b1aeb7  cb74db4691989566  ce93943c1cd35e54  da39a3ee5e6b4b0d  de30a88cc7f81b9e  ee333c6edce0ac6f  ff3601ca6c8ae8ba
.opencode/plans/: reading_speed.md
.roo/rules-merge-resolver/: 4_complete_example.xml
GSM_Overlay/: # CLAUDE.md  .gitignore  GSM Overlay – Toolbox System Specificati.md  README.md  backend_connector.js  background.js  block_detection.js  controller_shortcut_manager.js  find-in-page-preload.js  forge.config.js  furigana_utils.js  gamepad.js  index.html  jiten_cache.js  jiten_highlight.js  live_stats_widget.css  live_stats_widget.js  magpie.js  main.js  manual-mode-recommendation.html  manual_hotkey_controller.js  offset-helper.css  offset-helper.html  offset-helper.js  overlay.xcf  overlay_server.py  overlay_utils.js  package-lock.json  package.json  pnpm-lock.yaml  preload.js  reading_overlay_utils.js  settings.html  shared.css  toolbox.md  websocket_server.py  win_foreground.js  window.js  yomitan_bridge.js  yomitan_update_instructions.md  (+1 more)
GSM_Overlay/components/: manual-mode-card.css  manual-mode-card.js  settings-enhancer.js  settings-metadata.js
GSM_Overlay/input_server/: Cargo.toml  mecab_bridge.py
GSM_Overlay/input_server/src/: main.rs
GSM_Overlay/jiten.reader/: AGENT_CHANGES.md  CHANGES_MADE.md  LICENSE.md  PRIVACY.md  manifest.json
GSM_Overlay/scripts/: electron-dev-once.cjs
GSM_Overlay/toolbox/: tool-registry.js  toolbox.css  toolbox.js
GSM_Overlay/yomitan/: info.html  legal.html  manifest.json  manifest_static.json  offscreen.html  permissions.html  popup.html  quick-start-guide.html  settings.html  support.html  sw.js  templates-display.html  templates-modals.html  templates-settings.html
GameSentenceMiner/: __init__.py  anki.py  config_gui.py  configuration.py  discord_rpc.py  electron_config.py  electron_messaging.py  electron_store_config.json  ffmpeg.py  gametext.py  gsm.py  live_stats.py  longplay_handler.py  model.py  multi_mine_gui.py  notification.py  obs.py  obs_back.py  obs_old.py  package.py  package_updater.py  profile_switcher.py  replay_handler.py  ss_selector.py  text_log.py  util.py  utility_gui.py  vad.py
GameSentenceMiner/ai/: ai_prompting.py  contracts.py  gemini.py  registry.py  service.py
GameSentenceMiner/communication/: __init__.py  send.py  websocket.py
GameSentenceMiner/downloader/: download_tools.py
docs/: AI_AGENT_MAP.md  LOCALIZATION.md  LOGGING.md  SONARQUBE_FIXES.md  SONARQUBE_MCP.md  TS_TESTING.md  yomitan-dictionary.md
electron-src/: notifications.ts
hooks/: hook-plyer.py  hook-silero_vad.py  hook-vosk.py  hook-whisper.py
launchers/: steam_games.py  steam_launcher.py  vn_launcher.py  yuzu_launcher.py
plans/: afk-timer.md  fix_vndb_anilist_display.md  jiten_upgrader_analysis.md  jiten_upgrader_vndb_fix.md  link_type_reference.md  major_refactoring_plan.md  per-game-reading-speed-plan.md  per-game-stats-design.md  productivity_toolbar_improvements.md  toolbox_implementation_plan.md  translation.md  unified_search_and_jiten_upgrader.md  vndb_anilist_tags_genres_plan.md  yomitan-dict-download-fix.md  yomitan_dict.md  yomitan_dict_simplified.md
scripts/: benchmark_obs_scene_ocr.py  benchmark_obs_screenshot_capture.py  benchmark_stats.py  bracket_to_f15.ahk  check_sentence_furigana_against_anki.py  ci_wait_for_gsm_loaded.py  compute-version.cjs  concat_proj.py  continue_rendering.py  export-changelog-release-asset.mjs  generate_icons.js  generate_runtime_lock_manifest.py  generate_texthook_manifest.ps1  ocr_metrics_benchmark.py  push_submodules.ps1  render-release-body.mjs  render-release-body.test.mjs  run-update-chaos.cjs  stage-overlay-build.mjs  sync-version.mjs  theme-codemod.cjs  update_jiten_global_frequency.py  validate-changelog.mjs  verify-overlay-package.mjs
src/: anki.py  config_gui.py  configuration.py  ffmpeg.py  gametext.py  gsm.py  notification.py  obs.py  package_updater.py  util.py
temp/: sentence_furigana_mismatches.json
tests/: conftest.py  test_anki.py  test_benchmark_obs_scene_ocr.py  test_gametext_websocket.py  test_gsm_startup.py  test_lazy_import_boundaries.py  test_mov_replay.py  test_obs_launch.py  test_obs_screenshot_capture.py  test_obs_source_selection.py  test_port_diagnostics.py  test_profile_switcher.py  test_regression_fixes.py  test_replay_handler_audio.py  test_text_log.py  test_vad.py
texthooker/: build_for_gsm.ps1  index.html  package.json  pnpm-lock.yaml
vndb_scrape_data/: progress.json
yomitan/: legal-npm.html  popup-preview.html
(+1175 files in other folders)
