[build-system]
requires = [
  "setuptools>=61.0",  # PEP 621 support in setuptools
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "GameSentenceMiner"
version = "2.24.6"
description = "A tool for mining sentences from games. Update: Dependencies, replay buffer based line searching, and bug fixes."
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = { text = "MIT License" }
authors = [
  { name = "Beangate", email = "bpwhelan95@gmail.com"}
]
urls = { Homepage = "https://github.com/bpwhelan/GameSentenceMiner", Repository = "https://github.com/bpwhelan/GameSentenceMiner" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "requests~=2.32.5",
  "watchdog~=6.0.0",
  "DateTime~=5.5",
  "soundfile~=0.13.1",
  "toml~=0.10.2",
  "psutil~=7.1.0",
  "rapidfuzz~=3.10.0",
  "plyer~=2.1.0",
  "keyboard~=0.13.5",
  "websockets~=15.0.1",
  "dataclasses_json~=0.6.7",
  "obsws-python~=1.8.0",
  "numpy==2.2.6",
  "faster-whisper~=1.2.1",
  "silero-vad~=6.2.0",
  "regex~=2025.10.23",
  "opencv-python~=4.12.0.88",
  "scikit-image~=0.25.2",
  "oneocr==1.0.10",
  "google-genai~=1.46.0",
  "sounddevice~=0.5.2",
  "matplotlib~=3.10.6",
  "groq~=0.33.0",
  "flask~=3.1.2",
  "pystray~=0.19.5",
  "pygetwindow==0.0.9; sys_platform == 'win32'",
  "pywin32==311; sys_platform == 'win32'",
  "win10toast==0.9; sys_platform == 'win32'",
  "stable-ts~=2.19.1",
  "torchcodec~=0.8.1",
  "torchaudio~=2.8.0",
  "torch~=2.8.0",
  "pillow~=12.0.0",
  "openai~=2.6.0",
  "flask-compress~=1.15",
  "meikiocr~=0.1.4",
  "jaconv~=0.4.0",
  "loguru~=0.7.3",
  "pyperclipfix>=1.9.4",
  "desktop-notifier>=6.1.0",
  "mss>=10.1.0",
  "pyobjc~=10.3.1 ; sys_platform == 'darwin'",
  "pyqt6~=6.10.0",
  "pyqtdarktheme~=2.1.0",
  "langid~=1.1.6",
  "pysbd~=0.3.4",
  "pypresence>=4.6.1",
  "tokenizers==0.22.1",
  "curl-cffi~=0.13.0",
  "betterproto==2.0.0b7",
  "py7zr~=1.0.0",
  "waitress==3.0.2",
  "flasgger~=0.9.7",
  "pynput~=1.8.1 ; sys_platform == 'win32'",
  "uv>=0.9.22",
  "pip>=25.3",
  "ollama>=0.6.1",
]


[project.optional-dependencies]
lens = [
  "betterproto==2.0.0b7",
]

gpu = [
  "onnxruntime-gpu[cudnn,cuda]",
]

dev = [
  "pytest>=9.0.2",
]

# This creates a command-line script named `gamesentenceminer` that will
# call the `main()` function defined in the package's __main__.py (or wherever
# you've placed your entry function). Adjust the import path as needed.
[project.scripts]
gamesentenceminer = "GameSentenceMiner.gsm:main"

[tool.setuptools]
packages = { find = { include = ["GameSentenceMiner*"] } }

[tool.setuptools.package-data]
"GameSentenceMiner.web" = ["**/*"]
"GameSentenceMiner" = ["assets/*", "locales/*"]
"GameSentenceMiner.mecab" = ["**/*"]

[tool.uv.sources]
pypresence = { url = "https://github.com/qwertyquerty/pypresence/archive/168c0fc3c00d8b974017cfcd18a4e801b6b78dae.zip" }
