[build-system]
requires = [
  "setuptools>=61.0",  # PEP 621 support in setuptools
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "GameSentenceMiner"
version = "2026.6.10"
description = "A tool for mining sentences from games. Update: Dependencies, replay buffer based line searching, and bug fixes."
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = { file = "LICENSE" }
authors = [
  { name = "Beangate", email = "bpwhelan95@gmail.com"}
]
urls = { Homepage = "https://github.com/bpwhelan/GameSentenceMiner", Repository = "https://github.com/bpwhelan/GameSentenceMiner" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent"
]
dependencies = [
  "requests>=2.32.5,<2.34.0",
  "chardet>=3.0.2,<8",
  "watchdog~=6.0.0",
  "soundfile~=0.13.1",
  "toml~=0.10.2",
  "psutil>=7.1,<7.3",
  "python-xlib ; sys_platform == 'linux'",
  "rapidfuzz>=3.10,<3.15",
  "plyer~=2.1.0",
  "keyboard~=0.13.5",
  "websockets>=15.0.1,<16.1.0",
  "dataclasses_json~=0.6.7",
  "obsws-python~=1.8.0",
  "DateTime~=5.5",
  "numpy==2.2.6",
  "faster-whisper~=1.2.1",
  "silero-vad~=6.2.0",
  "regex>=2025.10.23,<2026.5.0",
  "opencv-python>=4.12.0.88,<4.13.1.0",
  "scikit-image~=0.25.2",
  "oneocr==1.0.12",
  "sounddevice~=0.5.2",
  "matplotlib~=3.10.6",
  "groq>=0.33,<1.3",
  "flask~=3.1.2",
  "pystray~=0.19.5",
  "pygetwindow==0.0.9; sys_platform == 'win32'",
  "pywin32==311; sys_platform == 'win32'",
  "stable-ts~=2.19.1",
  "torchcodec>=0.8.1,<0.12.0",
  "torchaudio>=2.8,<2.12",
  "torch>=2.8,<2.12",
  "pillow>=12.0,<12.3",
  "openai>=2.6,<2.37",
  "flask-compress~=1.15",
  "meikiocr~=0.3.4",
  "jaconv>=0.4,<0.6",
  "loguru~=0.7.3",
  "pyperclipfix>=1.9.4",
  "desktop-notifier>=6.1.0",
  "mss>=10.1.0",
  "pyobjc>=10.3.1,<12.2.0 ; sys_platform == 'darwin'",
  "pyqt6>=6.10,<6.12",
  "pyqtdarktheme~=2.1.0",
  "langid~=1.1.6",
  "pysbd~=0.3.4",
  "pypresence>=4.6.1",
  "tokenizers==0.22.1",
  "curl-cffi~=0.13.0",
  "protobuf>=6.33.2",
  "py7zr~=1.0.0",
  "waitress==3.0.2",
  "flasgger~=0.9.7",
  "pynput~=1.8.1 ; sys_platform == 'win32'",
  "uv~=0.9.22",
  "pip~=25.3",
  "ollama~=0.6.1",
  "aiohttp~=3.13.3",
  "fpng~=0.1.0",
  "onnxruntime>=1.23.2,<1.25.0",
  "google-genai>=1.70,<2.1",
  "windows-capture>=2.0.0 ; sys_platform == 'win32'",
]


[project.optional-dependencies]
lens = [
  "protobuf>=6.33.2",
]

gpu = [
  "onnxruntime-gpu[cudnn,cuda]",
]

dev = [
  "pytest>=9.0.2",
  "hypothesis>=6.100.0",
  "pre-commit>=4.3.0",
  "ruff>=0.14.0",
]

# This creates a command-line script named `gamesentenceminer` that will
# call the `main()` function defined in the package's __main__.py (or wherever
# you've placed your entry function). Adjust the import path as needed.
[project.scripts]
gamesentenceminer = "GameSentenceMiner.gsm:main"

[tool.setuptools]
packages = { find = { include = ["GameSentenceMiner*"] } }

[tool.setuptools.package-data]
"GameSentenceMiner.web" = ["**/*"]
"GameSentenceMiner" = ["assets/*", "locales/*"]
"GameSentenceMiner.mecab" = ["**/*"]

[[tool.uv.index]]
# CPU-only torch on Linux: PyPI's Linux torch wheel is the CUDA build and hard-
# depends on ~3GB of nvidia-*-cu12 packages even without a GPU. Windows/macOS
# PyPI wheels are already CPU-only, so they keep using the default index.
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
pypresence = { url = "https://github.com/qwertyquerty/pypresence/archive/168c0fc3c00d8b974017cfcd18a4e801b6b78dae.zip" }
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[tool.ruff]
target-version = "py310"
line-length = 120
force-exclude = true
extend-exclude = [
  "GameSentenceMiner/owocr/owocr/lens_protos/*_pb2.py",
]

[tool.ruff.lint.per-file-ignores]
"GameSentenceMiner/obs/__init__.py" = ["E402", "F401"]
