[package]
name = "gsm_overlay_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "net", "time", "sync", "process", "io-util"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"

gilrs = { version = "0.10", default-features = false, features = ["xinput"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
sudachi = { git = "https://github.com/WorksApplications/sudachi.rs.git", tag = "v0.6.10" }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
rdev = "0.5.3"
